--- a/ProyectoFinal-Micaela-Cesari/css/estilos.css
+++ b/ProyectoFinal-Micaela-Cesari/css/estilos.css
@@ -21,6 +21,47 @@ box-sizing: border-box;
     color: black;
     
 }
+.list{
+  list-style: none;
+  text-align: center;
+ 
+}
+.link{
+  display: inline-block;
+  margin-block: 2px;
+  text-decoration: none;
+  color:#fff;
+  position: relative;
+  margin-top:10px;
+  font-size: 1.5rem;
+}
+.link::after{
+  content:'';
+  width: 100%;
+  height:1px;
+  background-color: #fff;
+  border-radius:4px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform:scaleX(0);
+  transform-origin: left;
+  transition: transform .25s ease;
+}
+.link:hover::after{
+  transform:scaleX(1);
+}
+
+
+input {
+ 
+  transition: all 2s;       
+}
+input:focus {
+  width: 200px;
+  font-size: 24px;
+}
+
 
 
 
@@ -57,6 +98,7 @@ justify-content:center;
 
 .Parrafo{
   font-family: 'Poppins', sans-serif;
+  font-size: 200%;
 }
 
 .container{
@@ -125,6 +167,22 @@ justify-content:center;
 
 .imagen img{
 width: 100%;
+}
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  transition-duration: 0.3s;
+  transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+  transform: scale(1.1);
 }
 
 @media (max-width:520px){
