--- a/ProyectoFinal-Micaela-Cesari/css/estilos.css
+++ b/ProyectoFinal-Micaela-Cesari/css/estilos.css
@@ -180,13 +180,15 @@ width: 100%;
 
 @media (max-width:520px){
   .container{
-   grid-template-columns: repeat(1 , 1fr);  
+   grid-template-columns: repeat(2 , 1fr);  
    width: 100%;
    padding: 10%;
+   
    
   }
   .header{
   font-size: 12px;
+  
   }
   .primerParrafo{
   font-size: 150%;
@@ -195,6 +197,7 @@ width: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
+   margin-top: 5%;
 
   }
   .galeria_titulo{
