--- a/ProyectoFinal-Micaela-Cesari/css/estilos.css
+++ b/ProyectoFinal-Micaela-Cesari/css/estilos.css
@@ -12,6 +12,24 @@ box-sizing: border-box;
  flex-direction: column;
  min-height: 100vh;
 }
+.header{
+background-color: black;
+}
+
+.bgpropio {
+  font-family: 'Poppins', sans-serif;
+  background-color: black;
+}
+.nav-link {
+  color: white;
+  padding: 5%;
+  font-size: 20px;
+ margin-inline: 15px;
+}
+.navbar-toggler {
+  color: white;
+  border-color: white;
+}
 .primerParrafo{
     font-style: italic;
     font-weight: lighter;
@@ -21,80 +39,13 @@ box-sizing: border-box;
     color: black;
     
 }
-.list{
-  list-style: none;
-  text-align: center;
- 
+
+.d-blockw-100{
+  object-fit: cover 
 }
-.link{
-  display: inline-block;
-  margin-block: 2px;
-  text-decoration: none;
-  color:#fff;
-  position: relative;
-  margin-top:10px;
-  font-size: 1.5rem;
+.carousel-item{
+  height: auto;
 }
-.link::after{
-  content:'';
-  width: 100%;
-  height:1px;
-  background-color: #fff;
-  border-radius:4px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  transform:scaleX(0);
-  transform-origin: left;
-  transition: transform .25s ease;
-}
-.link:hover::after{
-  transform:scaleX(1);
-}
-
-
-
-
-
-
-
-.header{
-  width: 100%;
-  height: 80%;
-  color: white;
-  font-family: 'Poppins', sans-serif;
-  font-size: 20px;
-  background-color: black;
-  text-decoration: none;
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-  justify-items: center
-}
-
-.link{
-display: inline-block;
-width:100%;
-margin: 3px;
-padding: 5px;
-display:flex;
-list-style: none;
-justify-content:center;
-   
-}
-
-.link li a{
-  text-decoration: none;
-    color: white;
-    
-}
-
-.Parrafo{
-  font-family: 'Poppins', sans-serif;
-  font-size: 250%;
-  text-align: center;
-}
-
 .container{
   display:grid;
   grid-template-columns: repeat(4 , 1fr);
@@ -154,13 +105,11 @@ justify-content:center;
   width: auto;
 }
 
-.img{
+.img .imagen img{
   width: 100%;
 }
 
-.imagen img{
-width: 100%;
-}
+
 .hvr-grow {
   display: inline-block;
   vertical-align: middle;
@@ -176,6 +125,25 @@ width: 100%;
 .hvr-grow:focus,
 .hvr-grow:active {
   transform: scale(1.1);
+}
+
+.card{
+  width: 65%;
+ 
+}
+.col{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.card-img-top{
+  object-fit: cover;
+  width: 60%;
+ 
+  
+
 }
 
 @media (max-width:520px){
