--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -21,11 +21,10 @@
       color: white;
       border-color: white; }
 
-.primerParrafo {
+primerParrafo {
   font-style: italic;
-  font-weight: lighter;
   font-size: 50px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins" sans-serif;
   text-align: center;
   color: black; }
 
@@ -56,28 +55,30 @@
   transition-duration: 0.3s;
   transition-property: transform;
   position: relative; }
-  .containergaleria .galeria_item .hvr-grow .galeria_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .containergaleria .galeria_item .hvr-grow .galeria_img .galeria_titulo {
-      position: absolute;
-      bottom: 0;
-      font-size: 80%;
-      color: white;
-      background: linear-gradient(rgba(255, 255, 255, 0), black);
+  .containergaleria .galeria_item .hvr-grow .img .imagen img {
+    width: 100%; }
+    .containergaleria .galeria_item .hvr-grow .img .imagen img .galeria_img {
       width: 100%;
-      margin: 0;
-      padding: 10px; }
+      height: 100%;
+      object-fit: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .containergaleria .galeria_item .hvr-grow .img .imagen img .galeria_img .galeria_titulo {
+        position: absolute;
+        bottom: 0;
+        font-size: 80%;
+        color: white;
+        background: linear-gradient(rgba(255, 255, 255, 0), black);
+        width: 100%;
+        margin: 0;
+        padding: 10px; }
 
 .main {
-  background-color: white;
-  width: auto;
   display: flex;
   flex-direction: column;
+  background-color: white;
+  width: auto;
   justify-content: center;
   align-items: center; }
 
@@ -87,16 +88,13 @@
   color: white;
   width: auto; }
 
-.img .imagen img {
-  width: 100%; }
-
 .hvr-grow:hover,
 .hvr-grow:focus,
 .hvr-grow:active {
   transform: scale(1.1); }
 
-.card {
-  width: 65%; }
+.card, .card-img-top {
+  width: 60%; }
 
 .col {
   display: flex;
@@ -104,8 +102,7 @@
   align-items: center; }
 
 .card-img-top {
-  object-fit: cover;
-  width: 60%; }
+  object-fit: cover; }
 
 @media (max-width: 520px) {
   .container {
