--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -3,6 +3,13 @@
 @import "tipografia.scss";
 @import "variables.scss";
 
+@mixin flex-column{
+	display:flex;
+    flex-direction: column;
+	
+
+
+}
 
 .body{
  @include flex-column;
@@ -45,7 +52,7 @@
 $estilos: (
     color:black,
     centro:center,
-    fuente:'Poppins', sans-serif,
+    fuente:'Poppins' sans-serif,
     tFuente:50px,
     estilofuente:italic
 
@@ -92,14 +99,19 @@ primerParrafo{
           transition-duration: 0.3s;
            transition-property: transform;
             position:relative;
-                .galeria_img .img .imagen img{
+            
+            .img .imagen img{
+                width: 100%;
+             
+                .galeria_img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                     display:flex;
                     justify-content: center;
                     align-items: center; 
-                    
+                
+                
                     .galeria_titulo{
                         position:absolute;
                       bottom :0;
@@ -114,7 +126,33 @@ primerParrafo{
                 
                 
                 
+                
+                
+                
+                
+                
                 }
+            
+            
+            
+            
+
+
+
+
+
+
+            
+            
+            
+            }
+              
+                
+                   
+                
+                
+                
+                
                 
          
          
