--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -70,26 +70,30 @@
   .containergaleria .galeria_item .hvr-grow .hvr-grow:focus,
   .containergaleria .galeria_item .hvr-grow .hvr-grow:active {
     transform: scale(1.1); }
-    .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .galeria_img .img .imagen img,
-    .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .galeria_img .img .imagen img,
-    .containergaleria .galeria_item .hvr-grow .hvr-grow:active .galeria_img .img .imagen img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
-      .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .galeria_img .img .imagen img .galeria_titulo,
-      .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .galeria_img .img .imagen img .galeria_titulo,
-      .containergaleria .galeria_item .hvr-grow .hvr-grow:active .galeria_img .img .imagen img .galeria_titulo {
-        position: absolute;
-        bottom: 0;
-        font-size: 80%;
-        color: white;
-        background: linear-gradient(rgba(255, 255, 255, 0), black);
+    .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .imagen img,
+    .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .imagen img,
+    .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .imagen img {
+      width: 100%; }
+      .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .imagen img .galeria_img,
+      .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .imagen img .galeria_img,
+      .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .imagen img .galeria_img {
         width: 100%;
-        margin: 0;
-        padding: 10px; }
+        height: 100%;
+        object-fit: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .imagen img .galeria_img .galeria_titulo,
+        .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .imagen img .galeria_img .galeria_titulo,
+        .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .imagen img .galeria_img .galeria_titulo {
+          position: absolute;
+          bottom: 0;
+          font-size: 80%;
+          color: white;
+          background: linear-gradient(rgba(255, 255, 255, 0), black);
+          width: 100%;
+          margin: 0;
+          padding: 10px; }
 
 .footer {
   background-color: black;
@@ -98,14 +102,16 @@
   width: 100%;
   height: 60%; }
 
-.card, .card .col .card-img-top {
-  width: 60%; }
-  .card .col, .card .col .card-img-top .col {
+.m-0 {
+  margin: 0%; }
+  .m-0 .col {
     display: flex;
     justify-content: center;
     align-items: center; }
-    .card .col .card-img-top {
-      object-fit: cover; }
+    .m-0 .col .card, .m-0 .col .card .card-img-top {
+      width: 60%; }
+      .m-0 .col .card .card-img-top {
+        object-fit: cover; }
 
 @media (max-width: 520px) {
   .cont {
