--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -100,7 +100,7 @@ primerParrafo{
            transition-property: transform;
             position:relative;
             
-            .img .imagen img{
+            .img {
                 width: 100%;
              
                 .galeria_img {
