--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -25,13 +25,12 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  width: auto;
-  justify-content: center;
-  align-items: center; }
+  width: 60%; }
   .main .primerParrafo {
     font-style: italic;
     font-size: 50px;
     font-family: "Poppins" sans-serif;
+    align-items: center;
     text-align: center;
     color: black; }
 
@@ -40,67 +39,67 @@
   .carousel-item .d-blockw-100 {
     object-fit: cover; }
 
-.cont {
+.estilomarcas {
+  color: black;
+  font-size: 80px;
+  font-family: "Poppins", sans-serif; }
+
+.containergaleria {
   display: grid;
+  align-content: center;
   grid-template-columns: repeat(4, 1fr);
-  width: 100%;
   grid-auto-rows: 150px;
   padding: 20px;
   column-gap: 5rem;
   row-gap: 5rem;
   gap: 10px;
   background-color: white; }
-
-.estilomarcas {
-  color: black;
-  font-size: 80px;
-  font-family: "Poppins", sans-serif; }
-
-.containergaleria .galeria_item .hvr-grow {
-  display: inline-block;
-  vertical-align: middle;
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  transition-duration: 0.3s;
-  transition-property: transform;
-  position: relative; }
-  .containergaleria .galeria_item .hvr-grow .hvr-grow:hover,
-  .containergaleria .galeria_item .hvr-grow .hvr-grow:focus,
-  .containergaleria .galeria_item .hvr-grow .hvr-grow:active {
-    transform: scale(1.1); }
-    .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .imagen img,
-    .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .imagen img,
-    .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .imagen img {
-      width: 100%; }
-      .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .imagen img .galeria_img,
-      .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .imagen img .galeria_img,
-      .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .imagen img .galeria_img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: flex;
-        justify-content: center;
-        align-items: center; }
-        .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .imagen img .galeria_img .galeria_titulo,
-        .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .imagen img .galeria_img .galeria_titulo,
-        .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .imagen img .galeria_img .galeria_titulo {
-          position: absolute;
-          bottom: 0;
-          font-size: 80%;
-          color: white;
-          background: linear-gradient(rgba(255, 255, 255, 0), black);
+  .containergaleria .galeria_item .hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+    position: relative;
+    margin: 50px;
+    padding: 50px;
+    align-content: center; }
+    .containergaleria .galeria_item .hvr-grow .hvr-grow:hover,
+    .containergaleria .galeria_item .hvr-grow .hvr-grow:focus,
+    .containergaleria .galeria_item .hvr-grow .hvr-grow:active {
+      transform: scale(1.1); }
+      .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img,
+      .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img,
+      .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img {
+        width: 100%; }
+        .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .galeria_img,
+        .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .galeria_img,
+        .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .galeria_img {
           width: 100%;
-          margin: 0;
-          padding: 10px; }
+          height: 100%;
+          object-fit: cover;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .containergaleria .galeria_item .hvr-grow .hvr-grow:hover .img .galeria_img .galeria_titulo,
+          .containergaleria .galeria_item .hvr-grow .hvr-grow:focus .img .galeria_img .galeria_titulo,
+          .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .galeria_img .galeria_titulo {
+            position: absolute;
+            bottom: 0;
+            font-size: 80%;
+            color: white;
+            background: linear-gradient(rgba(255, 255, 255, 0), black);
+            width: 100%;
+            margin: 0;
+            padding: 10px; }
 
-.footer {
-  background-color: black;
+.fuente-footer {
+  font-size: 40px;
   font-family: "Poppins", sans-serif;
-  color: white;
-  width: 100%;
-  height: 60%; }
+  color: white; }
 
 .m-0 {
   margin: 0%; }
@@ -113,15 +112,20 @@
       .m-0 .col .card .card-img-top {
         object-fit: cover; }
 
+.text-center {
+  width: 400px;
+  display: flex;
+  justify-content: center; }
+
 @media (max-width: 520px) {
-  .cont {
+  .containergaleria {
     grid-template-columns: repeat(2, 1fr);
     width: 100%;
     padding: 10%; }
   .header {
     font-size: 12px; }
   .primerParrafo {
-    font-size: 100%; }
+    font-size: 80px; }
   .galeria_item {
     display: flex;
     justify-content: center;
@@ -131,11 +135,11 @@
       font-size: 100%; } }
 
 @media (min-width: 728px) {
-  .cont {
+  .containergaleria {
     grid-template-columns: repeat(3, 1fr); } }
 
 @media (min-width: 1024px) {
-  .cont {
+  .containergaleria {
     grid-template-columns: repeat(4, 1fr);
     width: 90%;
     margin: auto; } }
