--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -7,7 +7,8 @@
 .body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; }
+  min-height: 100vh;
+  width: 100%; }
 
 .header .bgpropio {
   font-family: "Poppins", sans-serif;
@@ -25,7 +26,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  width: 60%; }
+  width: 100%; }
   .main .primerParrafo {
     font-style: italic;
     font-size: 50px;
@@ -46,7 +47,8 @@
 
 .containergaleria {
   display: grid;
-  align-content: center;
+  width: 100%;
+  place-content: center;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 150px;
   padding: 20px;
@@ -89,8 +91,7 @@
           .containergaleria .galeria_item .hvr-grow .hvr-grow:active .img .galeria_img .galeria_titulo {
             position: absolute;
             bottom: 0;
-            font-size: 80%;
-            color: white;
+            font-size: 80px;
             background: linear-gradient(rgba(255, 255, 255, 0), black);
             width: 100%;
             margin: 0;
@@ -119,9 +120,10 @@
 
 @media (max-width: 520px) {
   .containergaleria {
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
-    padding: 10%; }
+    grid-template-columns: repeat(1, 1fr);
+    width: 50%;
+    padding: 10%;
+    margin: 0%; }
   .header {
     font-size: 12px; }
   .primerParrafo {
@@ -136,10 +138,11 @@
 
 @media (min-width: 728px) {
   .containergaleria {
-    grid-template-columns: repeat(3, 1fr); } }
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%; } }
 
 @media (min-width: 1024px) {
   .containergaleria {
     grid-template-columns: repeat(4, 1fr);
-    width: 90%;
+    width: 100%;
     margin: auto; } }
